--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
-scipy
-transformers
-joblib
-scikit-learn
-tensorflow
+--extra-index-url https://download.pytorch.org/whl/cpu
 torch
+joblib==1.1.1
+scikit-learn==1.2.1
+numpy==1.23.5
+pandas==1.5.3
+scipy==1.10.0
+streamlit==1.25.0
+transformers==4.24.0
+
