--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,6 @@
 [theme]
-base="dark"
-font="serif"
+primaryColor="#F63366"
+backgroundColor="#000000"
+secondaryBackgroundColor="#F0F2F6"
+textColor="#262730"
+font="sans serif"
